deployments/kubernetes/v1.30.0/20-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clever-kubernetes-operator-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clever-kubernetes-operator
  namespace: clever-kubernetes-operator-system
spec:
  podSelector:
    matchLabels:
      app: clever-kubernetes-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: clever-kubernetes-operator-system
  name: clever-kubernetes-operator
  labels:
    app: clever-kubernetes-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clever-kubernetes-operator
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
      labels:
        app: clever-kubernetes-operator
    spec:
      serviceAccountName: clever-kubernetes-operator
      automountServiceAccountToken: true
      volumes:
      - name: config
        secret:
          secretName: clever-kubernetes-operator-configuration
      containers:
        - image: clevercloud/clever-kubernetes-operator:3e427f3bb10071bd95811ba74a6a71bd247a8fb7
          imagePullPolicy: Always
          name: clever-kubernetes-operator
          command: ["/usr/local/bin/clever-kubernetes-operator"]
          args: ["-vvv"]
          volumeMounts:
          - name: config
            mountPath: "/etc/clever-kubernetes-operator"
            readOnly: true
          resources:
            requests:
              memory: 64M
              cpu: 100m
              ephemeral-storage: 128Mi
            limits:
              memory: 64M
              cpu: 100m
              ephemeral-storage: 128Mi
          ports:
            - containerPort: 8000
              protocol: TCP
              name: observability
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: observability
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 25000
            runAsUser: 20000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
